--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
+    "jsx": "react",
+    "allowJs": true,
+    "esModuleInterop": true, 
+    "forceConsistentCasingInFileNames": true, 
     "strict": true
   }
 }
