--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@types/react-motion": "^0.0.33",
+    "@types/react-native": "~0.70.6",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-motion": "^0.5.2",
-    "react-native": "0.70.5",
+    "react-native": "^0.71.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9"
@@ -25,7 +26,6 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
-    "@types/react-native": "~0.70.6",
     "typescript": "^4.6.3"
   },
   "private": true
