--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "jsx": "react",
+    "target": "ES6",
     "allowJs": true,
     "esModuleInterop": true, 
     "forceConsistentCasingInFileNames": true, 
